Add nav and banner

--- a/index.html
+++ b/index.html
@@ -11,22 +11,63 @@
 
 <body>
     <!-- Nav bar -->
-    <nav>
-        <!-- Nav Logo -->
+    <header>
+        <!-- Logo -->
         <div class="nav-logo">
             <img src="./assets/images/ic-logo.svg" alt="Logo">
-            <p>Colmar Academy</p>
+            <h1>Colmar Academy</h1>
         </div>
-        <!-- Nav Links -->
-        <div class="nav-links">
-            <ul class="nav-linklist">
-                <li><a href="#">On campus</a></li>
-                <li><a href="#">Online</a></li>
-                <li><a href="#">or companies</a></li>
-                <li><a href="#">Sign in</a></li>
-            </ul>
+        <nav>
+            <!-- Nav Links -->
+            <div class="nav-links">
+                <ul class="nav-linklist">
+                    <li><a href="#">On campus</a></li>
+                    <li><a href="#">Online</a></li>
+                    <li><a href="#">or companies</a></li>
+                    <li><a href="#">Sign in</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!-- Banner -->
+    <div class="banner">
+        <img src="./assets/images/banner.jpg" alt="Students studying at bench">
+        <div class="banner-text">
+            <h2>Learn something new everyday</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elie.</p>
+            <a href="#">Start Here</a>
         </div>
-    </nav>
+    </div>
+
+    <!-- Events Body-->
+    <div class="events-body">
+        <div class="events-body-highlight">
+            <img src="./assets/images/information-main.jpg" alt="">
+            <h2>It doesn't hurt to keep practicing</h2>
+            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque magni aut natus ullam non recusandae saepe harum quia. Fugit, iste. Error ad exercitationem quam possimus optio, facilis molestias quos. Exercitationem.</q>
+            <p>Emanuel, Sr Strategist at Hiring.com</p>
+        </div>
+    </div>
+<div class="events-body-side">
+<div class="events-body-side-1">
+    <img src="./assets/images/information-orientation.jpg" alt="Students walking">
+    <h3>Orientation date</h3>
+    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+    <span>Read more</span>
+</div>
+<div class="events-body-side-2">
+    <img src="./assets/images/information-orientation.jpg" alt="Students walking">
+    <h3>Orientation date</h3>
+    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+    <span>Read more</span>
+</div>
+<div class="events-body-side-3">
+    <img src="./assets/images/information-orientation.jpg" alt="Students walking">
+    <h3>Orientation date</h3>
+    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+    <span>Read more</span>
+</div>
+</div>
 
 </body>
 
