--- a/index.html
+++ b/index.html
@@ -44,31 +44,124 @@
         <div class="events-body-highlight">
             <img src="./assets/images/information-main.jpg" alt="">
             <h2>It doesn't hurt to keep practicing</h2>
-            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque magni aut natus ullam non recusandae saepe harum quia. Fugit, iste. Error ad exercitationem quam possimus optio, facilis molestias quos. Exercitationem.</q>
+            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque magni aut natus ullam non recusandae saepe
+                harum quia. Fugit, iste. Error ad exercitationem quam possimus optio, facilis molestias quos.
+                Exercitationem.</q>
             <p>Emanuel, Sr Strategist at Hiring.com</p>
         </div>
+        <!-- Events Side Box -->
+        <div class="events-body-side">
+            <div class="events-body-side-box">
+                <img src="./assets/images/information-orientation.jpg" alt="Students walking">
+                <div class="side-box-text">
+                    <h3>Orientation date</h3>
+                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                    <span>Read more</span>
+                </div>
+            </div>
+            <div class="events-body-side-box">
+                <img src="./assets/images/information-campus.jpg" alt="Students walking">
+                <div class="side-box-text">
+                    <h3>Orientation date</h3>
+                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                    <span>Read more</span>
+                </div>
+            </div>
+            <div class="events-body-side-box">
+                <img src="./assets/images/information-guest-lecture.jpg" alt="Students walking">
+                <div class="side-box-text">
+                    <h3>Orientation date</h3>
+                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                    <span>Read more</span>
+                </div>
+            </div>
+        </div>
     </div>
-<div class="events-body-side">
-<div class="events-body-side-1">
-    <img src="./assets/images/information-orientation.jpg" alt="Students walking">
-    <h3>Orientation date</h3>
-    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-    <span>Read more</span>
-</div>
-<div class="events-body-side-2">
-    <img src="./assets/images/information-orientation.jpg" alt="Students walking">
-    <h3>Orientation date</h3>
-    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-    <span>Read more</span>
-</div>
-<div class="events-body-side-3">
-    <img src="./assets/images/information-orientation.jpg" alt="Students walking">
-    <h3>Orientation date</h3>
-    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-    <span>Read more</span>
-</div>
-</div>
-
+    <!-- Start Learning body -->
+    <div class="courses">
+        <div class="learn-header">
+            <h2>Start Learning</h2>
+        </div>
+        <div class="learn-card-grid">
+            <div class="learn-card Csoftware">
+                <img src="./assets/images/course-software.jpg" alt="">
+                <h3>Software Engineering</h3>
+                <p>COURSES</p>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+            <div class="learn-card CcompArt">
+                <img src="./assets/images/course-computer-art.jpg" alt="">
+                <h3>Computer art</h3>
+                <p>COURSES</p>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+            <div class="learn-card Cdesign">
+                <img src="./assets/images/course-design.jpg" alt="">
+                <h3>Design</h3>
+                <p>COURSES</p>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+            <div class="learn-card Cdata">
+                <img src="./assets/images/course-data.jpg" alt="">
+                <h3>Data</h3>
+                <p>COURSES</p>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+            <div class="learn-card Cbusiness">
+                <img src="./assets/images/course-business.jpg" alt="">
+                <h3>Business</h3>
+                <p>COURSES</p>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+            <div class="learn-card Cmarketing">
+                <img src="./assets/images/course-marketing.jpg" alt="">
+                <h3>Marketing</h3>
+                <p>COURSES</p>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+        </div>
+    </div>
+    <!-- Video -->
+    <div class="thesis-body">
+        <h2>Thesis exhibit</h2>
+        <div class="events-body">
+            <div class="events-body-highlight">
+                <video controls width="250">
+                    <source src="./assets/videos/thesis.mp4" type="video/mp4">
+                    Sorry, your browser doesn't support embedded videos.
+                </video>
+                <h2>Reimagine urban</h2>
+                <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque magni aut natus ullam non recusandae
+                    saepe
+                    harum quia. Fugit, iste. Error ad exercitationem quam possimus optio, facilis molestias quos.
+                    Exercitationem.</q>
+            </div>
+            <!-- Events Side Box -->
+            <div class="events-body-side">
+                <div class="events-body-side-box">
+                    <img src="./assets/images/thesis-fisma.jpg" alt="Phone and paper">
+                    <div class="side-box-text">
+                        <h3>Fisma: Design and Prototype</h3>
+                        <p>Designer showcase of new prototype product</p>
+                    </div>
+                </div>
+                <div class="events-body-side-box">
+                    <img src="./assets/images/thesis-now-and-then.jpg" alt="Skyscrapers">
+                    <div class="side-box-text">
+                        <h3>Now and then</h3>
+                        <p>Research study about New York</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <p>© 2016 Colmar Academy. All rights reserved</p>
+        <ul>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
